--- a/src/app/invitar/invitar.css
+++ b/src/app/invitar/invitar.css
@@ -394,7 +394,7 @@
 .invitar-question {
   font-size: 20px;
   color: #ffffff;
-  font-weight: bold;
+  
   margin-bottom: 15px;
   line-height: 1.4;
 }
