--- a/src/app/privacidad/page.module.css
+++ b/src/app/privacidad/page.module.css
@@ -73,7 +73,7 @@
 .privacyTitle {
   color: #ffffff;
   font-size: 3.75rem;
-  font-weight: bold;
+  
   line-height: 1.1;
 }
 
